@@ -32,6 +32,11 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - Subject prefixing has been improved to always have a space between
+      the prefix and the subject even with non-ascii in the prefix.  This
+      will sometimes result in two spaces when the prefix is non-ascii but
+      the subject is ascii, but this is the lesser evil.  (LP: #1525954)
+
     - Treat message and digest headers and footers as empty if they contain
       only whitespace.  (LP: #1673307)
 
